# dotfiles

./: .zshrc  backup.sh  install.sh  neofetch_config  picom_conf  tmux_conf  zshrc
Scripts/: CMakeLists.txt  appimage-launcher.sh  battery.sh  network.sh  power.sh  power_window  power_window.c  pulserestart.sh  stat.sh  volume.sh
Scripts/screen-config-files/: Appart  MainScreen
alacritty/: alacritty.toml  alacritty.yml
dwm/: config.h  dwm
i3-conf/: config  i3blocks.conf
i3conf/: config  i3blocks.conf  i3status.conf
i3conf/i3blocks/: battery.sh  i3blocks.conf  network.sh  volume.sh
i3conf/lock/: lock.sh
lightgreeter-conf/: slick-greeter.conf
nvim/: lazy-lock.json
nvim/lua/config/: init.lua  keymaps.lua  options.lua
nvim/lua/plugins/: compiler.lua  lualine-nvim.lua  mason-lsconfig.lua  mason.lua  noice.lua  nvim-dap.lua  nvim-lspconfig.lua  nvim-treesitter.lua  rustacean-nvim.lua  telescope.lua  vim-fugitive.lua  vimwiki.lua
pacman-hooks/: clean_old_packages.hook  clean_package_cache.hook
